@@ -107,6 +107,24 @@ class ApplyPluginIntegSpec extends AbstractIntegrationSpec {
 
         and:
         buildFile << junitBasedBuildScript()
+        buildFile << """
+            // Needed when using ProjectBuilder
+            class AddOpensArgProvider implements CommandLineArgumentProvider {
+                private final Test test;
+                public AddOpensArgProvider(Test test) {
+                    this.test = test;
+                }
+                @Override
+                Iterable<String> asArguments() {
+                    return test.javaVersion.isCompatibleWith(JavaVersion.VERSION_1_9)
+                        ? ["--add-opens=java.base/java.lang=ALL-UNNAMED"]
+                        : []
+                }
+            }
+            tasks.withType(Test).configureEach {
+                jvmArgumentProviders.add(new AddOpensArgProvider(it))
+            }
+        """
 
         expect:
         executer.withArgument("--info")
